Ajustes e documentação
Ajustando relacionamento de publicação com animais
